Mantendo os valores no formulário

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.open-in-view=true
 
 spring.h2.console.enabled=true
 
+spring.devtools.livereload.enabled=true
 #logging.level.root=debug
 
 
